# mona_agent

./: .dockerignore  DEPLOYMENT_FIX_INSTRUCTIONS.md  Dockerfile  MESSAGES_TABLE_SETUP.md  PROJECT_DESCRIPTION.md  QUICK_REFERENCE.md  README.md  STREAMLIT_DEPLOYMENT.md  TECHNICAL_SPECIFICATION.md  agent.py  clinic_data.json  create_messages_table.sql  deploy_streamlit.py  docker-compose.yml  env.example  fix_log_turn_function.sql  main.py  memory_store.py  onboarding_graph.py  onboarding_graph_fixed.py  pyproject.toml  requirements.txt  schema.py  setup.py  simple_onboarding.py  streamlit_app.py  test_deployment.py  test_key.py  test_onboarding_endpoints.py  test_streamlit.py  test_system.py
.streamlit/: config.toml
agent/: Dockerfile  app.py  onboarding.py  requirements.txt
agent/routers/: chat.py
common/prompts/: morvo_prompt.txt  onboarding_graph.py  railway.json
common/tools/: onboarding_persistence.py  openai_insights_tool.py  supabase_client.py
docs/: index.html
frontend/: README.md  index.html  onboarding.html  onboarding.js  script.js  start.html  styles.css
memory_api/: __init__.py  app.py  mem.db  requirements.txt  store.py
prompts/: mona_intro_prompt.txt  morvo_prompt.txt  onboarding_graph.py
supabase_proxy/: __init__.py  app.py  requirements.txt
tools/: almarai_mentions_tool.py  almarai_posts_tool.py  almarai_seo_tool.py  almarai_tool.py  clinic_tool.py  conversation_logger.py  formatters.py  mentions_tool.py  onboarding_persistence.py  openai_insights_tool.py  perplexity_tool.py  posts_tool.py  seo_tool.py  supabase_client.py
(+13 files in other folders)
