[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mona_agent"
version = "0.1.0"
description = "Mona AI Marketing Agent"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "requests",
    "langchain",
    "pydantic",
    "supabase"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
namespaces = false